<resources>
    <string name="app_name">Commune Chat</string>
    <string name="nav_tab1">Contact</string>
    <string name="nav_tab2">Chat</string>
    <string name="nav_tab3">Search</string>
    <string name="nav_tab4">Me</string>
    <string name="nav_tab5">Feedback</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login32">Sign in</string>
    <string name="prompt_username">Username or Email</string>
    <string name="signup"> Sign Up</string>
    <string name="title_activity_conversation">conversationActivity</string>
    <string name="feedbackdescription">Your feedback is highly appreciated and will help to improve our application to serve you better</string>
    <string name="enterfeedback">Enter your feedback here</string>
    <string name="send">Send</string>
    <string name="patch1">Developer (Alpha version 1)</string>
    <string name="Information">Information details</string>

</resources>
